--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.4.2'
+    id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 }
 
@@ -17,15 +17,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.cloud:spring-cloud-starter-feign:1.0.0.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.0'
-    implementation 'org.springframework.cloud:spring-cloud-dependencies:2021.0.3'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-feign:1.0.0.RELEASE'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.0'
+    //implementation 'org.springframework.cloud:spring-cloud-dependencies:2021.0.1'
+    implementation 'org.springframework.cloud:spring-cloud-config-server'
     implementation 'com.squareup.okhttp3:okhttp:3.14.6'
-
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 
 }
-
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:2021.0.1")
+    }
+}
 test {
     useJUnitPlatform()
 }
