--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+    dependencies {
+        classpath 'org.liquibase:liquibase-core:3.6.3'
+        classpath "org.liquibase:liquibase-gradle-plugin:2.0.1"
+    }
+}
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.6.1'
+    id 'org.springframework.boot' version '2.7.4'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+    id 'java'
+    id 'org.liquibase.gradle' version '2.0.4'
 }
 
 group 'org.example'
@@ -9,6 +16,9 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+configurations.all {
+    exclude module: 'slf4j-log4j12'
 }
 
 dependencies {
@@ -27,6 +37,15 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     // https://mavenlibs.com/maven/dependency/org.testcontainers/nginx
     implementation 'org.testcontainers:nginx:1.17.6'
+    // https://mavenlibs.com/maven/dependency/com.netflix.curator/curator-framework
+    //implementation group: 'com.netflix.curator', name: 'curator-framework', version: '1.3.3'
+    implementation 'org.postgresql:postgresql:42.2.5'
+    implementation("org.liquibase:liquibase-core")
+    implementation group: 'net.javacrumbs.shedlock', name: 'shedlock-spring', version: '5.2.0'
+    implementation group: 'org.apache.curator', name: 'curator-framework', version: '5.4.0'
+    implementation group: 'net.javacrumbs.shedlock', name: 'shedlock-provider-zookeeper-curator', version: '5.2.0'
+    // https://mavenlibs.com/maven/dependency/net.javacrumbs.shedlock/shedlock-core
+    implementation group: 'net.javacrumbs.shedlock', name: 'shedlock-core', version: '5.2.0'
 
 
 }
@@ -38,3 +57,5 @@ dependencyManagement {
 test {
     useJUnitPlatform()
 }
+
+
